ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-04-21 Benedikt Heintel
	- CONFIGS:
		* Fixed #1792: Debian Version-Check need an Update for 5.0.1
	- LANGUAGES:
		* Fixed #1779: Catalan translation update

2009-04-21 Malte Geierhos
	- TOOLS:
		* Fixed #1789: update phpMyAdmin to 3.1.3.2
		* Fixed #1780: reenabled omega style in filemanager 

2009-04-20 Malte Geierhos
	- CONFIG FILES:
		* Fixed #1793: Optimize the fcgid Config
	- ENGINE:
		* Added specfile for rpmbuild thanks to George Machitidze
		* Fixed #1752: Adding of domain aliases broken in r1584
		* Fixed #1775 (changed regex to match imap.log for dovecot as well -> thx Bene)
	- GUI:
		* Fixed #1618 (added vhost prefix to allow setting either http:// or https:// )
		* Fixed #1688 & #1691 Thanks to Andrew Clarke

2009-04-20 Thomas Häber
	- LANGUAGES:
		* Fixed #1796: deutsch / englisch BUG in the Stable 1.0
	- THEMES:
		* Partially fix for Ticket #1787: Broken layout in IE because of doctype definition

2009-04-19 Thomas Häber
	- GUI:
		* Fixed word wrap problem with long descriptions, which results in hugh webpage widths
		* Fixed syntax bug in admin/hosting_plan_edit.php, thanks to tomdooley

2009-04-16 Thomas Häber
	- GUI:
		* Fixed encoding (html replace) problem in mail of client/hosting_plan_update.php
	- LANGUAGES:
		* Fixed pathes in translation tool makemsgs
		* updated po files

2009-04-14 Thomas Häber
	- GUI:
		* added and improved highlighting expressions for admin log
		* Fixed bug in client/hosting_plan_update.php (introduced with r1555)
		* Fixed #1761: Hosting plan description (to short field description in SQL table hosting_plan)

2009-04-12 Thomas Häber
	- GUI:
		* added GUI settings to enable/disable login from external source/website seperated for admin/reseller/client
		* added missing translation string for "Count default E-Mail addresses"

2009-04-11 Thomas Häber
	- GUI:
		* Fixed #1788: captcha fontfile not found (with new implemented font loading and LGPL fonts)