@@ -1,24 +1,24 @@
 apache2-mpm-worker
 apache2
 apache2.2-common
+apache2-suexec
 apache2-utils
 awstats
 bash
 bind9
 bzip2
+chkrootkit
 courier-authdaemon
 courier-base
 courier-imap
 courier-maildrop
 courier-pop
-chkrootkit
 diff
 dnsutils
 gcc
 gzip
 iptables
 ispell
-libapache2-mod-cband
 libapache2-mod-fastcgi
 libapache2-mod-fcgid
 libberkeleydb-perl
@@ -40,8 +40,8 @@ libnet-dns-perl
 libnet-libidn-perl
 libnet-netmask-perl
 libnet-smtp-server-perl
-libperl5.8
-libsasl2
+libperl5.10
+libsasl2-2
 libsasl2-modules
 libsnmp-session-perl
 libterm-readkey-perl
@@ -61,10 +61,11 @@ patch
 perl
 perl-base
 perl-modules
+php-pear
+php5
+php5-adodb
 php5-cgi
 php5-gd
-php5-idn
-php5-imap
 php5-mcrypt
 php5-mhash
 php5-mysql
@@ -72,7 +73,7 @@ policyd-weight
 postfix
 postgrey
 procmail
-proftpd-mysql
+proftpd
 rkhunter
 sasl2-bin
 ssh
